home page build

--- a/index.html
+++ b/index.html
@@ -8,27 +8,45 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel ="stylesheet" href="styles/normalize.css">
 </head>
-
 <body>
     <div id="content">
     <header>
         <div class ="image"> <img src="images/Cole.jpeg" alt="An Image of me" width="100%">
         <h1>Ukeje Cole Chinemerem</h1> 
     </header>
+    <ul class="nav-menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="chamber/siteplan.html">Site Plan</a></li>
+        <li><a href="chamber/" target="_blank">Chamber</a></li>
+        <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/study/scriptures" target="_blank">Scripture</a></li>
+    </ul>
     <main>
         <h2 id="#">
             WDD 230: Assignment Portal 
         </h2>
         <hr> 
-        <ul class ="Lessons">
-            <li> Lesson 02: <a href="Lesson 2/design-principles.html">Design Principles</a> </li>
-        </ul>
-        <br>
-        <section>
-            <hr>
-            <p id ="some"> <em>Some lessons may need more than one acivity/assignment link</em></p>
+        <section class="card">
+            <h3>Learning Activities</h3>
+            <ul>
+                <li><a href="#">01:</a></li>
+                <li><a href="#">02:</a></li>
+                <li><a href="#">03:</a></li>
+                <li><a href="#">04:</a></li>
+                <li><a href="#">05:</a></li>
+                <li><a href="#">06:</a></li>
+                <li><a href="#">07:</a></li>
+                <li><a href="#">08:</a></li>
+                <li><a href="#">09:</a></li>
+                <li><a href="#">10:</a></li>
+            </ul>
         </section>
-    </main>
+        <section class="card">
+            <h3>Information</h3>
+            <p>76°F - Sunshine</p>
+            <p>Number of visits: 15</p>
+                </section>
+            </main>
     <footer class="footer">
         <p id="Ukeje">&copy; 2023.:|:.Ukeje C. Cole.:|:.Nigeria</p>
         <p id ="last">Last Updated</p>
