home page build

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             WDD 230: Assignment Portal 
         </h2>
         <hr> 
-        <section class="card">
-            <h3>Learning Activities</h3>
+        <div class="container"><h3>Learning Activities</h3></div>
+            <section class="card">
             <ul>
                 <li><a href="#">01:</a></li>
                 <li><a href="#">02:</a></li>
@@ -41,11 +41,13 @@
                 <li><a href="#">10:</a></li>
             </ul>
         </section>
+
+        <h3>Information</h3>
         <section class="card">
-            <h3>Information</h3>
             <p>76°F - Sunshine</p>
             <p>Number of visits: 15</p>
-                </section>
+        </section>
+        
             </main>
     <footer class="footer">
         <p id="Ukeje">&copy; 2023.:|:.Ukeje C. Cole.:|:.Nigeria</p>
