--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="The Church of Latter- day Saints">
+    <meta property="og:description" context="Official website of The Church of Jesus Christ. Find messages to uplift your soul and invite the Spirit">
+    <meta property="og:image" context="https://assets.ldscdn.org/0d/7b/0d7bb93794eb11ecb29ceeeeac1ee20345ef0d4f/church_logo.png">
+    <meta property="og:url" context="https://churchofjesuschrist.org">
     <title>Assignment Portal for Ukeje Chinemerem Cole</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/base.css">
-    <link rel ="stylesheet" href="styles/normalize.css">
 </head>
 <body>
     <div id="content">
@@ -41,7 +46,6 @@
                 <li><a href="#">10:</a></li>
             </ul>
         </section>
-
         <h3>Information</h3>
         <section class="card">
             <p>76°F - Sunshine</p>
@@ -58,7 +62,6 @@
                 const d = new Date();
                 document.getElementById("demo").innerHTML = d;
             </script>
-
     </footer>
 </body>
 </html>
