--- a/Lesson 2/design.html
+++ b/Lesson 2/design.html
@@ -1,4 +1,9 @@
-<link rel="stylesheet" href="styles/design.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="styles/design.css">
+<title>Design Principles</title>
 <body>
     <header>
         <marquee behavior="alternate" direction="right">🪲 The Lazy Bug<br>Join us for the ribbon cutting cermony!<br>Friday at 11:00 AM!</marquee>
