--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="The Church of Latter- day Saints">
-    <meta property="og:description" context="Official website of The Church of Jesus Christ. Find messages to uplift your soul and invite the Spirit">
+    <meta property="og:title" content="The church of latter- day saints">
+    <meta property="og:description" context="official website of The church of jesus christ. find messages to uplift your soul and invite the Spirit">
     <meta property="og:image" context="https://assets.ldscdn.org/0d/7b/0d7bb93794eb11ecb29ceeeeac1ee20345ef0d4f/church_logo.png">
     <meta property="og:url" context="https://churchofjesuschrist.org">
     <title>Assignment Portal for Ukeje Chinemerem Cole</title>
