--- a/index.html
+++ b/index.html
@@ -45,18 +45,17 @@
                 <li><a href="#">10:</a></li>
             </ul>
         </section>
-        <h3>Information</h3>
-        <section class="card">
-            <p>76°F - Sunshine</p>
-            <p>Number of visits: 15</p>
-        </section>
-        
+        <div class="container">
+            <h3>Information</h3>
+            <section class="card">
+                <p>76°F - Sunshine</p>
+                <p>Number of visits: 15</p>
+            </section>
             </main>
     <footer class="footer">
         <p id="Ukeje">&copy; 2023.:|:.Ukeje C. Cole.:|:.Nigeria</p>
         <p id ="last">Last Updated</p>
         <p id="demo"></p>
-
             <script>
                 const d = new Date();
                 document.getElementById("demo").innerHTML = d;
