--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="The church of latter- day saints">
-    <meta property="og:description" context="official website of The church of jesus christ. find messages to uplift your soul and invite the Spirit">
-    <meta property="og:image" context="https://assets.ldscdn.org/0d/7b/0d7bb93794eb11ecb29ceeeeac1ee20345ef0d4f/church_logo.png">
-    <meta property="og:url" context="https://churchofjesuschrist.org">
     <title>Assignment Portal for Ukeje Chinemerem Cole</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -16,7 +13,7 @@
 <body>
     <div id="content">
     <header>
-        <div class ="image"> <img src="images/Cole.jpeg" alt="An Image of me" width="100%">
+        <div class ="image"> <img src="images/Cole.jpeg" alt="An Image of me">
         <h1>Ukeje Cole Chinemerem</h1> 
     </header>
     <ul class="nav-menu">
