--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="content">
     <header>
-        <div class ="image"> <img src="images/Cole.jpeg" alt="An Image of me">
+        <div class ="image"> <img src="images/Cole.jpeg" alt="An Image of me" width="100%">
         <h1>Ukeje Cole Chinemerem</h1> 
     </header>
     <ul class="nav-menu">
