--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container"><h3>Learning Activities</h3></div>
             <section class="card">
             <ul>
-                <li><a href="#">01:</a></li>
+                <li><a href="Lesson 2/design-principles.html">01: Design Principles</a></li>
                 <li><a href="#">02:</a></li>
                 <li><a href="#">03:</a></li>
                 <li><a href="#">04:</a></li>
