home page build

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
         <div class="container"><h3>Learning Activities</h3></div>
             <section class="card">
             <ul>
-                <li><a href="Lesson 2/design-principles.html">01: Design Principles</a></li>
-                <li><a href="#">02:</a></li>
-                <li><a href="#">03:</a></li>
+                <li><a href="Lesson 2/design-principles.html">02: Design Principles</a></li>
+                <li><a href="https://codepen.io/Ukejecole/pen/JjwvBZN">03:Codepen Submission</a></li>
                 <li><a href="#">04:</a></li>
                 <li><a href="#">05:</a></li>
                 <li><a href="#">06:</a></li>
