home page build

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <h2 id="#">
             WDD 230: Assignment Portal 
         </h2>
-        <div class="container"><h3>Learning Activities</h3></div>
+        <div class="container">
+            <h3>Learning Activities</h3></div>
             <section class="card">
             <ul>
                 <li><a href="Lesson2/design-principles.html">02: Design Principles</a></li>
@@ -41,21 +42,19 @@
                 <li><a href="#">10:</a></li>
             </ul>
         </section>
+
         <div class="container">
-            <h3>Information</h3>
-            <section class="card">
+            <h3>Information</h3></div>
+            <section class="card-2">
                 <p>76°F - Sunshine</p>
                 <p>Number of visits: 15</p>
             </section>
             </main>
+
     <footer class="footer">
         <p id="Ukeje">&copy; 2023.:|:.Ukeje C. Cole.:|:.Nigeria</p>
         <p id ="last">Last Updated</p>
         <p id="demo"></p>
-            <script>
-                const d = new Date();
-                document.getElementById("demo").innerHTML = d;
-            </script>
     </footer>
 </body>
 </html>
