home-page build

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class ="image"> <img src="images/Cole.jpeg" alt="An Image of me" width="100%">
         <h1>Ukeje Cole Chinemerem</h1> 
     </header>
+    <button id="menu"></button>
     <ul class="nav-menu">
         <li><a href="#">Home</a></li>
         <li><a href="chamber/siteplan.html">Site Plan</a></li>
@@ -43,7 +44,7 @@
             </ul>
         </section>
 
-        <div class="container">
+        <div class="container-2">
             <h3>Information</h3></div>
             <section class="card-2">
                 <p>76°F - Sunshine</p>
@@ -56,5 +57,7 @@
         <p id ="last">Last Updated</p>
         <p id="demo"></p>
     </footer>
+
+    <script src="scripts/menu.js"></script>
 </body>
 </html>
