--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                 <p>76°F - Sunshine</p>
                 <p>Number of visits: 15</p>
             </section>
+            <div class= "map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253692.03532163758!2d3.198367376422016!3d6.529508555821194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b9228fa2a3999%3A0xd7a8324bddbba1f0!2sIkeja%2C%20Lagos!5e0!3m2!1sen!2sng!4v1696043895301!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
             </main>
 
     <footer class="footer">
