Chamber site plan week 3

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class ="image"> <img src="images/Cole.jpeg" alt="An Image of me" width="100%">
         <h1>Ukeje Cole Chinemerem</h1> 
     </header>
-    <button id="menu"></button>
+    <button id="menu"> </button>
     <ul class="nav-menu">
         <li><a href="#">Home</a></li>
         <li><a href="chamber/siteplan.html">Site Plan</a></li>
@@ -32,8 +32,8 @@
             <h3>Learning Activities</h3></div>
             <section class="card">
             <ul>
-                <li><a href="Lesson2/design-principles.html">02: Design Principles</a></li>
-                <li><a href="https://codepen.io/Ukejecole/pen/JjwvBZN">03:Codepen Submission</a></li>
+                <li><a href="Lesson2/design-principles.html">02: Design Principles|<a href="Design/design.html">design</a></li>
+                <li><a href="https://codepen.io/Ukejecole/pen/JjwvBZN">03:Codepen Submission|<a href="lesson3/chamber-site-plan.html">Chamber Site Plan</a></li>
                 <li><a href="#">04:</a></li>
                 <li><a href="#">05:</a></li>
                 <li><a href="#">06:</a></li>
