--- a/lesson3/chamber-site-plan.html
+++ b/lesson3/chamber-site-plan.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Site plan for chamber of commerce website">
     <title> Houston's Chamber of commerce</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link href="styles/style.css" rel="stylesheet">
 
 </head>
 
-
 <body>
     <div id="content">
         <header>
-            <div class="logo-box"><img src="images/logo_small.png" alt="a logo of Houston's Chmaber of chamber" width="200" height="100"></div>
+            <div class="logo-box"><img src="images/android-chrome-192x192.png" alt="a logo of Houston's Chmaber of chamber"></div>
             <nav class=" header-link">
                 <div><a class="link1" href="index.html">Home</a></div>
                 <div><a class="link2" href="target-audience.html">Target Audience</a></div>
