--- a/lesson3/chamber-site-plan.html
+++ b/lesson3/chamber-site-plan.html
@@ -49,9 +49,9 @@
             <li> Accent Font (Optional): Playfair Display </li>
             
             <h2>Wireframe</h2>
-            <p><a href="https://wireframe.cc/pro/pp/1c343b0bb686136" target="_blank">Click Here To View Wireframe</a>
-            </p>
-            
+            <h1><a href="https://wireframe.cc/pro/pp/1c343b0bb686136" target="_blank">Click Here To View Wireframe</a>
+            </h1>
+
         </main>
         <footer class="footer">
             <p id="Ukeje">&copy; 2023 | Ukeje C Chinemerem | Lagos </p>
