--- a/lesson3/chamber-site-plan.html
+++ b/lesson3/chamber-site-plan.html
@@ -18,7 +18,7 @@
 
             <h2> Site Name</h2>
 
-            <p><strong>Houston Chamber of Commerce</strong> </p>
+            <h1><strong>Houston Chamber of Commerce</strong> </h1>
 
             <h2> Site Purpose</h2>
             <p>The Houston Chamber of Commerce website is dedicated to fostering economic growth, financial prosperity, and community engagement within the vibrant city of Houston. Our mission is to serve as a dynamic hub that empowers businesses, supports local entrepreneurs, and enriches the lives of Houston's residents. </p>
