home page build

--- a/lesson3/Chamber/index.html
+++ b/lesson3/Chamber/index.html
@@ -43,7 +43,7 @@
         <div id="header-date">
             
         </div>
-        <div class="banner hide"><p>🤝🏼 Come join us for our Weekly Meetings every</p> <div id="hex">&#10005;</div></div>
+        <div class="banner hide"><p>🤝🏼 Come join us for our Weekly Meetings every Monday</p> <div id="hex">&#10005;</div></div>
     </header>
     <main>
         <div class="block event sub">
@@ -111,8 +111,7 @@
         </div>
     </footer>
     <script src="js/script.js"></script>
-    <script src="js/intersectionobserver.js"></script>
-    <script src="js/indexExtra.js"></script>
+    <script src="scripts/indexExtra.js"></script>
     </main>
 </body>
 
