--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ul>
                 <li><a href="Lesson2/design-principles.html">02: Design Principles|<a href="Design/design.html">design</a></li>
                 <li><a href="https://codepen.io/Ukejecole/pen/JjwvBZN">03:Codepen Submission|<a href="lesson3/chamber-site-plan.html">Chamber Site Plan</a></li>
-                <li><a href="#">04:</a></li>
+                <li><a href="lesson3/Chamber/index.html">04:Chamber Home Page</a></li>
                 <li><a href="#">05:</a></li>
                 <li><a href="#">06:</a></li>
                 <li><a href="#">07:</a></li>
