--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -58,15 +58,11 @@
          </section>
     </main>
 
-    <footer>
-        <footer>
-            <p>
-                &copy; <span id="year"></span> .:|:. Ukeje Chinemerem Cole .:|:. Nigeria
-            </p>
-            <p class="paragraph-2">Last Updated: <span id="date"></span> <span id="time"></span></p>
-        </footer>
+    <footer class="footer-grid"">
+        <!-- JS! -->
     </footer>
-    <script src="scripts.js/script.js"></script>
+    <script src="scripts/scripts.js">
+    </script>
 </body>
 
 </html>
