--- a/index.html
+++ b/index.html
@@ -25,40 +25,42 @@
         <li><a href="https://www.churchofjesuschrist.org/study/scriptures" target="_blank">Scripture</a></li>
     </ul>
     <main>
-        <h2 id="#">
+        <h2>
             WDD 230: Assignment Portal 
         </h2>
         <div class="container">
-            <h3>Learning Activities</h3></div>
+            <h3>Learning Activities</h3>
             <section class="card">
-            <ul>
-                <li><a href="Lesson2/design-principles.html">02: Design Principles|<a href="Design/design.html">design</a></li>
-                <li><a href="https://codepen.io/Ukejecole/pen/JjwvBZN">03:Codepen Submission|<a href="lesson3/chamber-site-plan.html">Chamber Site Plan</a></li>
-                <li><a href="lesson3/Chamber/index.html">04:Chamber Home Page</a></li>
-                <li><a href="#">05:</a></li>
-                <li><a href="#">06:</a></li>
-                <li><a href="#">07:</a></li>
-                <li><a href="#">08:</a></li>
-                <li><a href="#">09:</a></li>
-                <li><a href="#">10:</a></li>
-            </ul>
-        </section>
+                <ul>
+                    <li><a href="Lesson2/design-principles.html">02: Design Principles|<a href="Design/design.html">design</a></li>
+                    <li><a href="https://codepen.io/Ukejecole/pen/JjwvBZN">03:Codepen Submission|<a href="lesson3/chamber-site-plan.html">Chamber Site Plan</a></li>
+                    <li><a href="lesson3/Chamber/index.html">04:Chamber Home Page</a></li>
+                    <li><a href="lesson5/bom.html">05:Book Of Mormon Page</a></li>
+                    <li><a href="#">06:</a></li>
+                    <li><a href="#">07:</a></li>
+                    <li><a href="#">08:</a></li>
+                    <li><a href="#">09:</a></li>
+                    <li><a href="#">10:</a></li>
+                </ul>
+            </section>
+        </div>  
 
         <div class="container-2">
-            <h3>Information</h3></div>
+            <h3>Information</h3>
             <section class="card-2">
                 <p>76°F - Sunshine</p>
                 <p>Number of visits: 15</p>
             </section>
-            <div class= "google-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253692.03532163758!2d3.198367376422016!3d6.529508555821194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b9228fa2a3999%3A0xd7a8324bddbba1f0!2sIkeja%2C%20Lagos!5e0!3m2!1sen!2sng!4v1696043895301!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-            </main>
+        </div>
+        <div class= "google-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253692.03532163758!2d3.198367376422016!3d6.529508555821194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b9228fa2a3999%3A0xd7a8324bddbba1f0!2sIkeja%2C%20Lagos!5e0!3m2!1sen!2sng!4v1696043895301!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+    </main>
 
-            <footer class="footer-grid">
-                <h3 class="footer-head"></h3>
-                <p class="footer-p"></p>
-            </footer>
-            <script src="scripts/script.js"></script>
-            <script src="scripts/menu.js"></script>
-        </body>
+    <footer class="footer-grid">
+        <h3 class="footer-head"></h3>
+        <p class="footer-p"></p>
+    </footer>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/menu.js"></script>
+</body>
 </html>
