--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <h3>Learning Activities</h3>
             <section class="card">
                 <ul>
+                    <li>01: <a href="lesson01/holygrail.html">Holy Layout</a> | <a href="https://codepen.io/Ukejecole/pen/wvRbBOG" target="_blank">Javascript Pen</a></li>
                     <li><a href="Lesson2/design-principles.html">02: Design Principles|<a href="Design/design.html">design</a></li>
                     <li><a href="https://codepen.io/Ukejecole/pen/JjwvBZN">03:Codepen Submission|<a href="lesson3/chamber-site-plan.html">Chamber Site Plan</a></li>
                     <li><a href="lesson3/Chamber/index.html">04:Chamber Home Page</a></li>
