--- a/lesson3/chamber-site-plan.html
+++ b/lesson3/chamber-site-plan.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Ukeje Cole">
     <meta name="description" content="Site plan for chamber of commerce website">
+    <meta property="og:title" content="Home page Housotn Chamber Of Commerce">
+    <meta type="url" content="https://ukejecole.github.io/wdd230/">
     <title> Houston's Chamber of commerce</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
