--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <section class="card">
                 <ul>
                     <li>01: <a href="lesson01/holygrail.html">Holy Layout</a> | <a href="https://codepen.io/Ukejecole/pen/wvRbBOG" target="_blank">Javascript Pen</a></li>
-                    <li><a href="Lesson2/design-principles.html">02: Design Principles|<a href="Design/design.html">design</a></li>
-                    <li><a href="https://codepen.io/Ukejecole/pen/JjwvBZN">03:Codepen Submission|<a href="lesson3/chamber-site-plan.html">Chamber Site Plan</a></li>
-                    <li><a href="lesson3/Chamber/index.html">04:Chamber Home Page</a></li>
+                    <li><a href="Lesson2/design-principles.html">02: Design Principles|<a href="Lesson2/Design/design.html">design|<a href="lesson1/media-query.html"target="_blank">Media query</a></li>
+                    <li><a href="https://codepen.io/Ukejecole/pen/JjwvBZN">03:Responsive "Hamburger"|<a href="lesson3/chamber-site-plan.html">Chamber Site Plan</a></li>
+                    <li><a href="lesson3/Chamber/index.html">04:Chamber Home Page| <a href="https://codepen.io/Ukejecole/pen/QWzRbxm"></a>CSS Pseudo-Classes</a></li>
                     <li><a href="lesson5/bom.html">05:Book Of Mormon Page</a></li>
                     <li><a href="#">06:</a></li>
                     <li><a href="#">07:</a></li>
