added toggle and js for dark mode

--- a/Chamber/index.html
+++ b/Chamber/index.html
@@ -29,6 +29,10 @@
         <div class="social-links">
             <a href="www.facebook.com"><img src="images/facebook.png" alt="Facebook icon"></a>
             <a href="www.twitter.com"><img src="images/twitter.png" alt="Twitter icon"></a>
+            <label class="switch" id="toggle">
+                <input type="checkbox" id ="toggle">
+                <span class="slider round"></span>
+              </label>
         </div>
         <button id="nav-btn"><span>&#9776;</span><span>&#10005;</span></button>
         <nav>
@@ -111,7 +115,10 @@
     </footer>
     <script src="scripts/script.js"></script>
     <script src="scripts/indexExtra.js"></script>
+    <script src="scripts/dark.js"></script>
+
     </main>
+</div>
 </body>
 
 </html>
