--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>
             WDD 230: Assignment Portal 
         </h2>
-        
+
         <div class="container">
             <h3>Learning Activities</h3>
             <section class="card">
@@ -37,7 +37,7 @@
                     <li><a href="Lesson2/design-principles.html">02: Design Principles|<a href="Lesson2/Design/design.html">design|<a href="lesson1/media-query.html"target="_blank">Media query</a></li>
                     <li><a href="https://codepen.io/Ukejecole/pen/JjwvBZN">03:Responsive "Hamburger"|<a href="lesson3/chamber-site-plan.html">Chamber Site Plan</a></li>
                     <li><a href="lesson3/Chamber/index.html"target="_blank">04:Chamber Home Page| <a href="https://codepen.io/Ukejecole/pen/QWzRbxm"target="_blank">CSS Pseudo-Classes</a></li>
-                    <li><a href="lesson5/bom.html">05:Book Of Mormon Page</a></li>
+                    <li><a href="lesson5/bom.html">05:Book Of Mormon Page|<a href="Chamber/index.html"target="_blank">Dark mode</a></li>
                     <li><a href="#">06:</a></li>
                     <li><a href="#">07:</a></li>
                     <li><a href="#">08:</a></li>
