--- a/Chamber/index.html
+++ b/Chamber/index.html
@@ -29,7 +29,7 @@
         <div class="social-links">
             <a href="www.facebook.com"><img src="images/facebook.png" alt="Facebook icon"></a>
             <a href="www.twitter.com"><img src="images/twitter.png" alt="Twitter icon"></a>
-            <label class="switch" id="toggle">
+            <label class="switch" id="toggle-on">
                 <input type="checkbox" id ="toggle">
                 <span class="slider round"></span>
               </label>
