--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li><a href="https://codepen.io/Ukejecole/pen/JjwvBZN">03:Responsive "Hamburger"|<a href="lesson3/chamber-site-plan.html">Chamber Site Plan</a></li>
                     <li><a href="lesson3/Chamber/index.html"target="_blank">04:Chamber Home Page| <a href="https://codepen.io/Ukejecole/pen/QWzRbxm"target="_blank">CSS Pseudo-Classes</a></li>
                     <li><a href="lesson5/bom.html">05:Book Of Mormon Page|<a href="Chamber/index.html"target="_blank">Dark mode</a></li>
-                    <li><a href="#">06:</a></li>
+                    <li><a href="lesson06/images/landscape.webp.webp">06:Webp|<a href="Chamber/index.html">Responsive Images</a></li>
                     <li><a href="#">07:</a></li>
                     <li><a href="#">08:</a></li>
                     <li><a href="#">09:</a></li>
