--- a/Chamber/index.html
+++ b/Chamber/index.html
@@ -55,7 +55,7 @@
                <source media="(min-width: 1000px)" srcset="images/hero-large.jpg">
                <source media="(min-width: 600px)" srcset="images/hero-medium.jpg">
                <source media="(min-width: 300px)" srcset="images/hero-small.jpg">
-                <img src="images/hero-base.jpg" alt="Chamber members in meeting">
+                <img src="images/hero-base.jpg" alt="Chamber members in meeting" loading="lazy">
             </picture>
             <h2>Welcome to the <br/><span>Houston Chamber of Commerce</span></h2>
             <a href="join.html" id="join-btn">Join the Chamber
@@ -127,6 +127,8 @@
     <script src="scripts/script.js"></script>
     <script src="scripts/indexExtra.js"></script>
     <script src="scripts/dark.js"></script>
+    <script src="scripts/intersectionobserver.js"></script>
+
 
     </main>
 </div>
