--- a/Chamber/index.html
+++ b/Chamber/index.html
@@ -29,13 +29,11 @@
         <div class="social-links">
             <a href="www.facebook.com"><img src="images/facebook.png" alt="Facebook icon"></a>
             <a href="www.twitter.com"><img src="images/twitter.png" alt="Twitter icon"></a>
-            <label class="switch" id="toggle-on">
-                <input type="checkbox" id ="toggle">
-                <span class="slider round"></span>
-              </label>
+            <div id="mode">🌙</div>
         </div>
         <button id="nav-btn"><span>&#9776;</span><span>&#10005;</span></button>
         <nav>
+            
             <ul id="navUl">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
