--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h3>Information</h3>
             <section class="card-2">
                 <p>76°F - Sunshine</p>
-                <p>Number of visits: 15</p>
+                <h4 class="last-visit abel-text">Page Visit: <span id="visit-string"></span></h4>
             </section>
         </div>
         <div class= "google-map">
