--- a/Chamber/discover.html
+++ b/Chamber/discover.html
@@ -49,7 +49,7 @@
     </header>
     <div id="gallery">
         <h1 class="abel-text direct-info">Discover</h1>
-        <p class="abel-text discover-intro"><b>Galveston Island</b> is a barrier island on the Texas Gulf Coast in the United States, about 50 miles southeast of Houston. The entire island, with the exception of Jamaica Beach is within the city limits of the City of Galveston in Galveston County</p>
+        <p class="abel-text discover-intro"><b>Houston Chamber of Commerce </b> The Houston Chamber of Commerce has a rich history of fostering economic growth, promoting collaboration, and supporting the business community in the Greater Houston area. As a member, you are now connected to a powerful network of individuals and organizations committed to the success of our region.</p>
         <div class="photo"> 
             <picture class="noview left-img">
                 <source class="op-img" media="(min-width: 420px)" srcset="images/civic-towers-medium.jpg">
@@ -143,7 +143,6 @@
         <hr>
         <div class="second-half">
             <span id="footer-year">
-                <!-- JS! -->
             </span>
             <span> | Ukeje Cole | </span>
         <span>WDD 230 </span>
