--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
         <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
         <li><a href="https://www.churchofjesuschrist.org/study/scriptures" target="_blank">Scripture</a></li>
     </ul>
+        <div class="hero">
+        <div class="herolabel">
+            <p>Barranquilla Colombia Temple</p>
+        </div>
+        <picture>
+            <source srcset="Lesson06/images/hero-small.webp" media="(max-width:400px)">
+            <source srcset="Lesson06/images/hero-large.webp" media="(max-width:900px)">
+            <img src="Lesson06/images/hero-large.webp" alt="Barranquilla Colombia Temple" style="width: 900px">
+        </picture>
+    </div>
     <main>
         <h2>
             WDD 230: Assignment Portal 
@@ -39,7 +49,7 @@
                     <li><a href="lesson3/Chamber/index.html"target="_blank">04:Chamber Home Page| <a href="https://codepen.io/Ukejecole/pen/QWzRbxm"target="_blank">CSS Pseudo-Classes</a></li>
                     <li><a href="lesson5/bom.html">05:Book Of Mormon Page|<a href="Chamber/index.html"target="_blank">Dark mode</a></li>
                     <li><a href="lesson06/images/landscape.webp.webp">06:Webp|<a href="Chamber/index.html">Responsive Images</a></li>
-                    <li><a href="#">07:</a></li>
+                    <li><a href="lesson07/lazyload.html">Lazy load</a> | <a href="lesson07/bom.html"> BOM localStorage</a></li>
                     <li><a href="#">08:</a></li>
                     <li><a href="#">09:</a></li>
                     <li><a href="#">10:</a></li>
