--- a/Chamber/thanks.html
+++ b/Chamber/thanks.html
@@ -48,46 +48,11 @@
         <div class="banner hide"><p>🤝🏼 Come join us for our Weekly Meetings every Monday</p> <div id="hex">&#10005;</div></div>
     </header>
     <main>
-        <div class="main-area main-join-area">
-        <h1 class="abel-text">Join us at Houston Chamber of Commerce!</h1>
-        <p class="abel-text">
-            Our strength at Houston Chamber of Commerce is in our members. And with all the benefits we offer from connections, business advisory services, Networking Opportunities, discounts for participation at the International Trade Fair, and a lot of business development services, It's a win-win situation. Help us grow as we help you grow.
-        </p>
-        <form class="abel-text join-form" method="GET" action="thanks.html">
-            <fieldset>
-                <legend>Basic Information</legend>
-                <label class="block-text">First Name<span class="hy">*</span>
-                <input class="block-input" type="text" name="fname" required></label>
-                <label class="block-text">Last Name<span class="hy">*</span>
-                <input class="block-input" type="text" name="lname" required></label>
-                <label class="block-text">Business Position
-                <input class="block-input" type="text" name="Position"
-                title="Can only include alpha characters, hyphens, and spaces and must contain a minimum of 7 characters" pattern="[A-Za-z -]{7,}"></label>
-                <label class="block-text">Email<span class="hy">*</span>
-                <input placeholder=" someone@email.com" class="block-input" type="email" name="email" required></label>
-                <label class="block-text">Telephone<span class="hy">*</span>
-                <input class="block-input" type="tel" name="phone" required></label>
-                <label class="block-text">Business Name/Title<span class="hy">*</span>
-                <input class="block-input" name="business" type="text" required></label>
-            </fieldset>
-            <fieldset>
-                <legend>Membership</legend>
-                <div>Membership Level</div>
-                <label  class="block-radio"><input type="radio" name="membership" value="np"> NP Membership</label>
-                <label  class="block-radio"><input type="radio" name="membership" value="bronze"> Bronze Membership</label>
-                <label  class="block-radio"><input type="radio" name="membership" value="silver"> Silver Membership</label>
-                <label  class="block-radio"><input type="radio" name="membership" value="gold"> Gold Membership</label>
-            </fieldset>
-            <label  class="block-text">
-                Business Description
-                <textarea id="description" class="block-input"></textarea>
-            </label>
-            <input type="hidden" value="curdateandtime" id="curtime">
-            <input class="join-btn" type="submit" value="Join The Chamber">
-            
-        </form>
-        <h4 class="last-visit abel-text">Last Visit: <span id="visit-string"></span></h4>
-    </div>
+        <div class="main-join-area">
+            <div id="thanks" class="abel-text">
+                Thank <span id="orange">you</span> for joining us!
+            </div>
+        </div>
     </main>
     <footer>
         <div class="first-half" id="dark-6">
