--- a/Chamber/directory.html
+++ b/Chamber/directory.html
@@ -47,7 +47,17 @@
         </div>
         <div class="banner hide"><p>🤝🏼 Come join us for our Weekly Meetings every Monday</p> <div id="hex">&#10005;</div></div>
     </header>
+    <main>
+        <div class="main-area">
+            <h1 class="abel-text direct-info">Our Member Directory</h1>
 
+            <div class="switch-box"><img class="active-switch grid-view-icon" src="images/grid-btn.png" alt="grid view icon"><img class ="list-view-icon" src="images/list-btn.png" alt="list view icon"></div>
+            <div class="directory-container grid-directory">
+                <!-- JS -->
+            </div>
+            <h4 class="last-visit abel-text">Last Visit: <span id="visit-string"></span></h4>
+        </div>
+    </main>
     <footer>
         <div class="first-half" id="dark-6">
             <div class="first-half-1">
