--- a/Chamber/directory.html
+++ b/Chamber/directory.html
@@ -84,6 +84,7 @@
 </footer>
 <script src="scripts/script.js"></script>
 <script src="scripts/intersectionobserver.js"></script>
+<script src="scripts/directory.js"></script>
 </div>
 </body>
 </html>
