--- a/Chamber/join.html
+++ b/Chamber/join.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="description" content="Houston Chamber of Commerce home page">asAA
+    <meta property="description" content="Houston Chamber of Commerce home page">
     <title>Houston Chamber of Commerce</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
