--- a/Chamber/discover.html
+++ b/Chamber/discover.html
@@ -29,7 +29,10 @@
         <div class="social-links">
             <a href="www.facebook.com"><img src="images/facebook.png" alt="Facebook icon"></a>
             <a href="www.twitter.com"><img src="images/twitter.png" alt="Twitter icon"></a>
-            <div id="mode">🌙</div>
+            <label class="switch" id="toggle">
+                <input type="checkbox" id ="toggle">
+                <span class="slider round"></span>
+              </label>
         </div>
         <button id="nav-btn"><span>&#9776;</span><span>&#10005;</span></button>
         <nav>
@@ -39,7 +42,6 @@
                 <li><a class="active" href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="contact.html">Contact</a></li>
             </ul> 
         </nav>
         <div id="header-date">
